--- a/Pag3.html
+++ b/Pag3.html
@@ -11,7 +11,7 @@
      <h1>Atividade Feriado</h1>
      <h2>Print Linha de Comando - Visual Code</h2>
      <br>
-     <img src="Imagens/linhacomando.png">
+     <img src="Imagens/linha_comando.png">
      <!--Criação link-->
      <a href="Pag4.html">Próxima Página</a>
     </body>
